--- a/src/styles.less
+++ b/src/styles.less
@@ -1,1 +1,20 @@
 /* You can add global styles to this file, and also import other style files */
+
+html {
+  background-color: #fff;
+  color: #1b1f3b;
+  min-height: 100%;
+
+  &[data-theme='dark'] {
+    background-color: #222;
+    color: #fff;
+  }
+}
+
+body {
+  background-color: inherit;
+  color: inherit;
+  margin: 0;
+  font-family: var(--tui-font-text, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif);
+  min-height: 100vh;
+}
