--- a/src/styles.less
+++ b/src/styles.less
@@ -1,14 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
 html {
-  background-color: #fff;
-  color: #1b1f3b;
+  background-color: var(--tui-background-base);
+  color: var(--tui-text-primary);
   min-height: 100%;
-
-  &[data-theme='dark'] {
-    background-color: #222;
-    color: #fff;
-  }
 }
 
 body {
