--- a/src/app/features/persons/components/list/person-list.component.html
+++ b/src/app/features/persons/components/list/person-list.component.html
@@ -35,6 +35,27 @@
     </div>
   </div>
 
+  <div class="search-container">
+    <tui-textfield iconStart="@tui.search">
+      <label tuiLabel>Search persons</label>
+      <input placeholder="Search by name..." tuiTextfield [formControl]="searchControl" />
+    </tui-textfield>
+    @if (searchControl.value) {
+      <button
+        type="button"
+        tuiButton
+        appearance="flat"
+        icon="@tui.close"
+        size="s"
+        (click)="clearSearch()"
+        tuiTooltip="Clear search"
+        class="search-clear-button"
+      >
+        <tui-icon [icon]="'@tui.close'" />
+      </button>
+    }
+  </div>
+
   @if (loading()) {
     <div class="loading">
       <tui-loader size="l" />
@@ -47,19 +68,15 @@
     <div class="cards-grid">
       @for (person of persons(); track person.id) {
         <div class="person-card" tuiAppearance="neutral" tuiCardMedium>
-          <tui-avatar
-            size="l"
-            [src]="person.person_photo_url || null"
-            [round]="true"
-          >
+          <tui-avatar size="l" [src]="person.person_photo_url || null" [round]="true">
             @if (!person.person_photo_url) {
               {{ person.first_name[0] }}{{ person.second_name[0] }}
             }
           </tui-avatar>
           <div class="person-info">
             <h3 tuiTitle>
-              {{ person.first_name }}
-              <span tuiSubtitle>{{ person.second_name }}</span>
+              {{ person.second_name }}
+              <span tuiSubtitle>{{ person.first_name }}</span>
             </h3>
           </div>
         </div>
