--- a/src/app/features/persons/components/list/person-list.component.less
+++ b/src/app/features/persons/components/list/person-list.component.less
@@ -34,6 +34,14 @@
     }
   }
 
+  .search-container {
+    margin: 1rem 0;
+
+    tui-textfield {
+      width: 100%;
+    }
+  }
+
   .loading {
     display: flex;
     justify-content: center;
