--- a/src/app/features/persons/components/list/person-list.component.html
+++ b/src/app/features/persons/components/list/person-list.component.html
@@ -1,6 +1,14 @@
 <div class="person-list">
   <div class="header">
     <h1>Persons</h1>
+    <button
+      type="button"
+      tuiButton
+      (click)="navigateToCreate()"
+      class="add-button"
+    >
+      Add Person
+    </button>
     <div class="sort-controls">
       <button
         type="button"
@@ -67,7 +75,7 @@
   } @else {
     <div class="cards-grid">
       @for (person of persons(); track person.id) {
-        <div class="person-card" tuiAppearance="neutral" tuiCardMedium>
+        <div class="person-card" tuiAppearance="neutral" tuiCardMedium (click)="navigateToPersonDetail(person.id)">
           <tui-avatar size="l" [src]="person.person_photo_url || null" [round]="true">
             @if (!person.person_photo_url) {
               {{ person.first_name[0] }}{{ person.second_name[0] }}
