--- a/src/app/features/persons/components/list/person-list.component.html
+++ b/src/app/features/persons/components/list/person-list.component.html
@@ -76,7 +76,7 @@
     <div class="cards-grid">
       @for (person of persons(); track person.id) {
         <div class="person-card" tuiAppearance="neutral" tuiCardMedium (click)="navigateToPersonDetail(person.id)">
-          <tui-avatar size="l" [src]="person.person_photo_url || null" [round]="true">
+          <tui-avatar size="l" [src]="photoUrl(person)" [round]="true">
             @if (!person.person_photo_url) {
               {{ person.first_name[0] }}{{ person.second_name[0] }}
             }
