--- a/src/app/features/persons/components/list/person-list.component.html
+++ b/src/app/features/persons/components/list/person-list.component.html
@@ -48,20 +48,19 @@
       <label tuiLabel>Search persons</label>
       <input placeholder="Search by name..." tuiTextfield [formControl]="searchControl" />
     </tui-textfield>
-    @if (searchControl.value) {
-      <button
-        type="button"
-        tuiButton
-        appearance="flat"
-        icon="@tui.close"
-        size="s"
-        (click)="clearSearch()"
-        tuiTooltip="Clear search"
-        class="search-clear-button"
-      >
-        <tui-icon [icon]="'@tui.close'" />
-      </button>
-    }
+      @if (searchControl.value) {
+        <button
+          type="button"
+          tuiButton
+          appearance="flat"
+          icon="@tui.close"
+          size="s"
+          (click)="clearSearch()"
+          class="search-clear-button"
+        >
+          <tui-icon [icon]="'@tui.close'" />
+        </button>
+      }
   </div>
 
   @if (loading()) {
@@ -73,19 +72,17 @@
   } @else if (persons().length === 0) {
     <div class="empty">No persons found</div>
   } @else {
-    <div class="cards-grid">
+    <div class="persons-list">
       @for (person of persons(); track person.id) {
-        <div class="person-card" tuiAppearance="neutral" tuiCardMedium (click)="navigateToPersonDetail(person.id)">
+        <div class="person-card" tuiAppearance="neutral" tuiCardLarge tuiCell="l" (click)="navigateToPersonDetail(person.id)">
           <tui-avatar size="l" [src]="photoUrl(person)" [round]="true">
             @if (!person.person_photo_url) {
-              {{ person.first_name[0] }}{{ person.second_name[0] }}
+              {{ person.first_name[0].toUpperCase() }}{{ person.second_name[0].toUpperCase() }}
             }
           </tui-avatar>
-          <div class="person-info">
-            <h3 tuiTitle>
-              {{ person.second_name }}
-              <span tuiSubtitle>{{ person.first_name }}</span>
-            </h3>
+          <div tuiTitle>
+            {{ capitalizeName(person.second_name) }}
+            <div tuiSubtitle>{{ capitalizeName(person.first_name) }}</div>
           </div>
         </div>
       }
