--- a/src/app/features/home/components/home.component.html
+++ b/src/app/features/home/components/home.component.html
@@ -6,14 +6,10 @@
     </header>
 
     <div class="home__links">
-      <a routerLink="/seasons" class="home__link-card">
-        <div class="home__link-card-icon">📅</div>
-        <div class="home__link-card-title">Seasons</div>
-        <div class="home__link-card-subtitle">View and manage seasons</div>
-      </a>
-
       <a routerLink="/sports" class="home__link-card">
-        <div class="home__link-card-icon">⚽</div>
+        <div class="home__link-card-icon">
+          🏈
+        </div>
         <div class="home__link-card-title">Sports</div>
         <div class="home__link-card-subtitle">Browse sports categories</div>
       </a>
