--- a/src/app/features/sports/components/list/sport-list.component.html
+++ b/src/app/features/sports/components/list/sport-list.component.html
@@ -5,20 +5,22 @@
 
   @if (loading()) {
     <div class="sport-list__loading">
-      <div class="sport-list__loader"></div>
+      <tui-loader size="l" />
     </div>
   } @else if (error()) {
     <div class="sport-list__error">Error loading sports: {{ error()?.message }}</div>
   } @else if (sports().length === 0) {
     <div class="sport-list__empty">No sports found</div>
   } @else {
-    <div class="sport-list__grid">
+    <div class="sport-list__items">
       @for (sport of sports(); track sport.id) {
-        <div class="sport-list__card" (click)="navigateToDetail(sport.id)">
-          <div class="sport-list__card-title">{{ sport.title }}</div>
-          @if (sport.description) {
-            <div class="sport-list__card-description">{{ sport.description }}</div>
-          }
+        <div class="sport-list__card" tuiAppearance="floating" tuiCardLarge tuiCell="l" (click)="navigateToDetail(sport.id)">
+          <div tuiTitle>
+            {{ sport.title }}
+            @if (sport.description) {
+              <div tuiSubtitle>{{ sport.description }}</div>
+            }
+          </div>
         </div>
       }
     </div>
